proj1/tests/other-tests/MINZ_tests/error/fn_destructure.py
def with_destructure(a, (b, c)):
    return b + c